--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,18 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/api/index" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "/index.py",
+      "use": "@vercel/python",
+      "config": {
+        "runtime": "python3.6"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ]
 }
