--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/main.py",
-        "use": "@vercel/python"
+        "src": "main.go",
+        "use": "@vercel/go"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "api/main.py"
+        "dest": "main.go"
       }
     ]
   }
