--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "api/*.go",
-        "use": "@vercel/go"
-      }
+        {
+            "src": "api/main.go",
+            "use": "@vercel/go"
+        }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "api/main.go"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "api/main.go"
+        }
     ]
-  }
-  
+}
