--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
         {
-            "src": "api/main.py",
+            "src": "api/**/*.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "api/main.py"
+            "dest": "api/$1"
         }
     ]
 }
