--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
-        {
-            "src": "api/**/*.py",
-            "use": "@vercel/python"
-        }
+      {
+        "src": "api/**/*.py",
+        "use": "@vercel/python"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "api/$1"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "api/main.py"
+      }
     ]
-}
+  }
