--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,14 @@
 {
     "builds": [
-      {
-        "src": "api/**/*.py",
-        "use": "@vercel/python"
-      }
+        {
+            "src": "api/main.py",
+            "use": "@vercel/python"
+        }
     ],
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "api/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "api/main.py"
-      }
+        {
+            "src": "/(.*)",
+            "dest": "api/main.py"
+        }
     ]
-  }
+}
